public/css/main.css
@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&family=Montserrat:wght@600&family=Space+Mono:wght@400;700&display=swap');

body {
    color: #333333;
}

.font-sans {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
}

.flex {
    display: flex;
    padding: 1.1rem;
}

.flex-col {
    flex-direction: column;
}

.top {
    font-family: Inconsolata;
    text-transform: uppercase;
    letter-spacing: -0.1rem;
    font-size: 1.7rem;
    font-weight: 700;
}

.top > p {
    margin: 0;
}

.font-mono {
    font-family: "Space Mono", Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
}

main > header {
    font-size: 1.4rem;
    line-height: 4rem;
}

main > section {
    font-size: 1.2rem;
    line-height: 1.8rem;
    letter-spacing: -0.05rem;
    color: #4F4F4F;
}

footer {
    font-family: Montserrat;
    font-size: 0.9rem;
    font-weight: 600;
    align-self: center;
}

footer a {
    color: #333333;
    text-decoration: none;
}

footer a:hover,
footer a:focus {
    border-bottom: 1px solid #000000;
}

